src/main/kubernetes/daybook3-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daybook3
  labels:
    app: daybook3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: daybook3
  template:
    metadata:
      labels:
        app: daybook3
    spec:
      containers:
      - name: daybook3
        image: vskurikhin/daybook3:latest
        ports:
        - containerPort: 8080
