src/main/kubernetes/daybook3-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daybook3
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: daybook3
